--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "type": "module",
   "dependencies": {
     "@studio-freight/lenis": "^1.0.13",
-    "gsap": "^3.11.5"
+    "gsap": "^3.11.5",
+    "three": "^0.152.2"
   }
 }
